--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <linkk href="../src/index.css" rel="stylesheet" />
+      <script src="index.js" defer></script>
 
     
     <div id="root"></div>
