--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <bds />
     <meta charset="utf-8" />
     <linkk href="../src/index.css" rel="stylesheet" />
       <script src="index.js" defer></script>
